--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="ec2-3-129-23-53.us-east-2.compute.amazonaws.com" class="btn-link">View Demo &rarr;</a>
+                        <a href="http://ec2-3-129-23-53.us-east-2.compute.amazonaws.com" class="btn-link">View Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -143,7 +143,22 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn-link">View Demo &rarr;</a>
+                        <a href="https://docs.google.com/presentation/d/1FMSWFL8jzmyuXwc9nLog_Xr46szzyhSs/edit?slide=id.p1#slide=id.p1" class="btn-link">View Demo &rarr;</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <h3>Methane Emission Flux Calculation with IME Method</h3>
+                        <p>Developed an atmospheric methane flux inversion system using the Integrated Mass Enhancement (IME) method. Integrated ERA5 reanalysis data (pressure, temperature, 10m wind components) to quantify methane emissions from regional sources. Implemented spatial interpolation techniques and uncertainty quantification based on wind speed variability and plume detection errors.</p>
+                        <div class="tags">
+                            <span>Python</span>
+                            <span>ERA5 Data</span>
+                            <span>Atmospheric Science</span>
+                            <span>Remote Sensor</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/Lmiryc/Methane_Calc" class="btn-link">View Project &rarr;</a>
                     </div>
                 </div>
 
