--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="bio">
                 Master's student in <strong>Information Science</strong> at University of Michigan.
                 <br>
-                Specializing in Computer Vision, 3D Reconstruction, and AR/VR Applications.
+                Specializing in Frontend/Backend Development, 3D Reconstruction, UX Design and AR/VR Applications.
             </p>
             <div class="social-links">
                 <a href="https://github.com/Lmiryc" target="_blank">GitHub</a>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="edu-details">
                     <p><strong>Master of Science, Information Science</strong></p>
-                    <p class="date">Aug. 2025 – Apr. 2027 (expected)</p>
+                    <p class="date">Aug. 2025 - Apr. 2027 (expected)</p>
                 </div>
             </div>
             <div class="education-item">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="edu-details">
                     <p><strong>Bachelor of Science, Electrical Computer Engineering</strong></p>
-                    <p class="date">Aug. 2022 – Aug. 2026 (expected)</p>
+                    <p class="date">Aug. 2022 - Aug. 2026 (expected)</p>
                 </div>
             </div>
         </div>
@@ -59,8 +59,8 @@
             
             <div class="experience-item">
                 <div class="exp-header">
-                    <h3>Algorithm Intern, VSTA Tech</h3>
-                    <span class="date">Dec. 2024 – Apr. 2025</span>
+                    <h3>Algorithm Intern, VSAT Tech</h3>
+                    <span class="date">Dec. 2024 - Apr. 2025</span>
                 </div>
                 <p class="subtitle">Remote sensor data analysis and validation </p>
                 <ul>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="https://docs.google.com/presentation/d/1ydFZGQSufuiWo41kwWksnqCWUHA-8zW2/edit?usp=share_link&ouid=110331859558280944101&rtpof=true&sd=true" class="btn-link">View Demo &rarr;</a>
+                        <a href="https://docs.google.com/presentation/d/1ydFZGQSufuiWo41kwWksnqCWUHA-8zW2/edit?usp=sharing&ouid=110331859558280944101&rtpof=true&sd=true" class="btn-link">View Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -159,6 +159,21 @@
                     </div>
                     <div class="card-footer">
                         <a href="https://github.com/Lmiryc/Methane_Calc" class="btn-link">View Project &rarr;</a>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="card-content">
+                        <h3>Grab N Cook - Student Cooking Platform</h3>
+                        <p>Designed a comprehensive app prototype for college students. Features include shopping assistance based on transportation access, easy budgeting tools, and AI-powered cooking guidance specifically designed for students. Led UX research, prototyping, and user testing throughout the design process.</p>
+                        <div class="tags">
+                            <span>UX Design</span>
+                            <span>User Research</span>
+                            <span>Prototyping</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://sites.google.com/umich.edu/grab-n-cook/team-contribution-report?authuser=0" class="btn-link">View Project &rarr;</a>
                     </div>
                 </div>
 
